Swapping template out for EBXS Core.

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group   = "com.yourname.modid"
+version = "0.0"
+group   = "extrabiomes.core"
 
 minecraft {
 	version = "1.7.10-10.13.2.1291"
