--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
 apply plugin: 'forge'
 
 version = "0.0"
-group   = "extrabiomes.core"
+group   = "extrabiomes.autumn"
 
 minecraft {
 	version = "1.7.10-10.13.2.1291"
