--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ minecraft {
 jar {
 	// Sets the output directory of the mod's jar file. Can be an absolute
 	// path to your Minecraft mods folder for quicker testing
+	exclude 'extrabiomes/core'
+	exclude 'extrabiomes/lib'
 	destinationDir = file 'output'
 }
 
@@ -54,6 +56,7 @@ processResources {
 	// replace stuff in mcmod.info, nothing else
 	from(sourceSets.main.resources.srcDirs) {
 		include 'mcmod.info'
+		exclude '**/extrabiomes/core/**'
 				
 		// replace version and mcversion
 		expand 'version':project.version, 'mcversion':project.minecraft.version
