--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,14 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "0.0.2"
+version = version_major + "." + version_minor + "." + version_revision
 group   = "extrabiomes.autumn"
 
 minecraft {
-	version = "1.7.10-10.13.2.1291"
+	version = project.mcversion + "-" + project.forgeversion
 	runDir  = "debug"
+
+	replace '@VERSION@', project.version
 }
 
 jar {
